--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_openai_api_example_app
 description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
@@ -13,15 +12,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.8
-  openai_dart: 0.6.0+1
-  flutter_dotenv: 5.1.0
+  openai_dart: ^0.6.0+1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
   flutter_lints: ^6.0.0
@@ -31,4 +30,8 @@ flutter:
 
 
   uses-material-design: true
+
+  assets:
+    - .env
+
 
